[package]
name = "pages"
version = "0.1.0"
edition = "2021"
build = "build.rs"
homepage = "https://github.com/realaravinth/pages"
repository = "https://github.com/realaravinth/pages"
documentation = "https://github.con/realaravinth/pages"
readme = "https://github.com/realaravinth/pages/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
actix-http = "3.0.0-rc.2"
actix-rt = "2.6.0"
config = "0.11"
derive_more = "0.99"
git2 = "0.13.25"
lazy_static = "1.4"
log = "0.4"
my-codegen = {package = "actix-web-codegen", git ="https://github.com/realaravinth/actix-web"}
num_cpus = "1.13"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
url = "2.2"
