[package]
name = "pages"
version = "0.1.0"
edition = "2021"
build = "build.rs"
homepage = "https://github.com/realaravinth/pages"
repository = "https://github.com/realaravinth/pages"
documentation = "https://github.con/realaravinth/pages"
readme = "https://github.com/realaravinth/pages/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-http = "3.0.4"
actix-rt = "2"
my-codegen = {package = "actix-web-codegen", git ="https://github.com/realaravinth/actix-web"}

config = "0.13"
git2 = "0.14.2"

serde = { version = "1", features = ["derive", "rc"]}
serde_json = "1"

pretty_env_logger = "0.4"
log = "0.4"

lazy_static = "1.4"

url = "2.2"

derive_more = "0.99"

num_cpus = "1.13"

tokio = { version = "1", features=["sync"]}
num_enum = "0.5.7"

mime_guess = "2.0.4"

[dev-dependencies]
mktemp = "0.4.1"
