[package]
name = "pages"
version = "0.1.0"
edition = "2021"
build = "build.rs"
homepage = "https://github.com/realaravinth/pages"
repository = "https://github.com/realaravinth/pages"
documentation = "https://github.con/realaravinth/pages"
readme = "https://github.com/realaravinth/pages/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-http = "3.0.4"
actix-identity = "0.4.0"
actix-rt = "2"
actix-web-codegen-const-routes = { version = "0.1.0", tag = "0.1.0", git = "https://github.com/realaravinth/actix-web-codegen-const-routes" }
argon2-creds = { branch = "master", git = "https://github.com/realaravinth/argon2-creds"}
sqlx = { version = "0.6.1", features = [ "runtime-actix-rustls", "postgres", "time", "offline", "json"] }
clap = { version = "3.2.20", features = ["derive"]}

config = "0.13"
git2 = "0.14.2"

serde = { version = "1", features = ["derive", "rc"]}
serde_json = "1"

pretty_env_logger = "0.4"

lazy_static = "1.4"

url = "2.2"
urlencoding = "2.1.0"

derive_more = "0.99"

num_cpus = "1.13"

tokio = { version = "1", features=["sync"]}
num_enum = "0.5.7"

mime_guess = "2.0.4"
mime = "0.3.16"
rust-embed = "6.3.0"
rand = "0.8.5"
tracing = { version = "0.1.37", features = ["log"]}
tracing-actix-web = "0.6.2"
toml = "0.5.9"
serde_yaml = "0.9.14"

[dependencies.cache-buster]
git = "https://github.com/realaravinth/cache-buster"

[dependencies.tera]
default-features = false
version = "1.15.0"

[dependencies.actix-auth-middleware]
branch = "v4"
features = ["actix_identity_backend"]
git = "https://github.com/realaravinth/actix-auth-middleware"
version = "0.2"


[dev-dependencies]
futures = "0.3.24"
mktemp = "0.4.1"


[workspace]
exclude = ["utils/cache-bust"]
