[package]
name = "librepages"
version = "0.1.0"
edition = "2021"
homepage = "https://git.batsense.net/LibrePages/librepages"
repository = "https://git.batsense.net/LibrePages/librepages"
documentation = "https://github.con/realaravinth/librepages"
readme = "https://git.batsense.net/LibrePages/librepages/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache-buster = { version = "0.2.0", git = "https://git.batsense.net/LibrePages/cache-buster" }
serde = { version = "1", features  = ["derive"] }
serde_json = "1"
